src/grammar/AngelscriptExprParser/AngelscriptExprParserParser.cpp

// Generated from AngelscriptExprParser.g4 by ANTLR 4.13.2


#include "AngelscriptExprParserVisitor.h"

#include "AngelscriptExprParserParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AngelscriptExprParserParserStaticData final {
  AngelscriptExprParserParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AngelscriptExprParserParserStaticData(const AngelscriptExprParserParserStaticData&) = delete;
  AngelscriptExprParserParserStaticData(AngelscriptExprParserParserStaticData&&) = delete;
  AngelscriptExprParserParserStaticData& operator=(const AngelscriptExprParserParserStaticData&) = delete;
  AngelscriptExprParserParserStaticData& operator=(AngelscriptExprParserParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag angelscriptexprparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<AngelscriptExprParserParserStaticData> angelscriptexprparserParserStaticData = nullptr;

void angelscriptexprparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (angelscriptexprparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(angelscriptexprparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AngelscriptExprParserParserStaticData>(
    std::vector<std::string>{
      "expr", "logicalOrExpr", "logicalAndExpr", "bitOrExpr", "bitXorExpr", 
      "bitAndExpr", "equalityExpr", "relationalExpr", "shiftExpr", "additiveExpr", 
      "multiplicativeExpr", "unaryExpr", "primaryExpr", "literal"
    },
    std::vector<std::string>{
      "", "'true'", "'false'", "'null'", "'('", "')'", "'+'", "'-'", "'*'", 
      "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", "'!'", "'<'", "'>'", "'=='", 
      "'!='", "'<='", "'>='", "'&&'", "'||'"
    },
    std::vector<std::string>{
      "", "True_", "False_", "Nullptr", "LeftParen", "RightParen", "Plus", 
      "Minus", "Star", "Div", "Mod", "Xor", "And", "Or", "Tilde", "Not", 
      "Less", "Greater", "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
      "AndAnd", "OrOr", "IntegerLiteral", "FloatingLiteral", "CharacterLiteral", 
      "StringLiteral", "Whitespace", "Newline", "BlockComment", "LineComment"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  angelscriptexprparserParserStaticData = std::move(staticData);
}

}

AngelscriptExprParserParser::AngelscriptExprParserParser(TokenStream *input) : AngelscriptExprParserParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AngelscriptExprParserParser::AngelscriptExprParserParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AngelscriptExprParserParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *angelscriptexprparserParserStaticData->atn, angelscriptexprparserParserStaticData->decisionToDFA, angelscriptexprparserParserStaticData->sharedContextCache, options);
}

AngelscriptExprParserParser::~AngelscriptExprParserParser() {
  delete _interpreter;
}

const atn::ATN& AngelscriptExprParserParser::getATN() const {
  return *angelscriptexprparserParserStaticData->atn;
}

std::string AngelscriptExprParserParser::getGrammarFileName() const {
  return "AngelscriptExprParser.g4";
}

const std::vector<std::string>& AngelscriptExprParserParser::getRuleNames() const {
  return angelscriptexprparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& AngelscriptExprParserParser::getVocabulary() const {
  return angelscriptexprparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AngelscriptExprParserParser::getSerializedATN() const {
  return angelscriptexprparserParserStaticData->serializedATN;
}


//----------------- ExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AngelscriptExprParserParser::LogicalOrExprContext* AngelscriptExprParserParser::ExprContext::logicalOrExpr() {
  return getRuleContext<AngelscriptExprParserParser::LogicalOrExprContext>(0);
}

tree::TerminalNode* AngelscriptExprParserParser::ExprContext::EOF() {
  return getToken(AngelscriptExprParserParser::EOF, 0);
}


size_t AngelscriptExprParserParser::ExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleExpr;
}


std::any AngelscriptExprParserParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::ExprContext* AngelscriptExprParserParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 0, AngelscriptExprParserParser::RuleExpr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(28);
    logicalOrExpr();
    setState(29);
    match(AngelscriptExprParserParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalOrExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::LogicalOrExprContext::LogicalOrExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::LogicalAndExprContext *> AngelscriptExprParserParser::LogicalOrExprContext::logicalAndExpr() {
  return getRuleContexts<AngelscriptExprParserParser::LogicalAndExprContext>();
}

AngelscriptExprParserParser::LogicalAndExprContext* AngelscriptExprParserParser::LogicalOrExprContext::logicalAndExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::LogicalAndExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::LogicalOrExprContext::OrOr() {
  return getTokens(AngelscriptExprParserParser::OrOr);
}

tree::TerminalNode* AngelscriptExprParserParser::LogicalOrExprContext::OrOr(size_t i) {
  return getToken(AngelscriptExprParserParser::OrOr, i);
}


size_t AngelscriptExprParserParser::LogicalOrExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleLogicalOrExpr;
}


std::any AngelscriptExprParserParser::LogicalOrExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitLogicalOrExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::LogicalOrExprContext* AngelscriptExprParserParser::logicalOrExpr() {
  LogicalOrExprContext *_localctx = _tracker.createInstance<LogicalOrExprContext>(_ctx, getState());
  enterRule(_localctx, 2, AngelscriptExprParserParser::RuleLogicalOrExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(31);
    logicalAndExpr();
    setState(36);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::OrOr) {
      setState(32);
      match(AngelscriptExprParserParser::OrOr);
      setState(33);
      logicalAndExpr();
      setState(38);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalAndExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::LogicalAndExprContext::LogicalAndExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::BitOrExprContext *> AngelscriptExprParserParser::LogicalAndExprContext::bitOrExpr() {
  return getRuleContexts<AngelscriptExprParserParser::BitOrExprContext>();
}

AngelscriptExprParserParser::BitOrExprContext* AngelscriptExprParserParser::LogicalAndExprContext::bitOrExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::BitOrExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::LogicalAndExprContext::AndAnd() {
  return getTokens(AngelscriptExprParserParser::AndAnd);
}

tree::TerminalNode* AngelscriptExprParserParser::LogicalAndExprContext::AndAnd(size_t i) {
  return getToken(AngelscriptExprParserParser::AndAnd, i);
}


size_t AngelscriptExprParserParser::LogicalAndExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleLogicalAndExpr;
}


std::any AngelscriptExprParserParser::LogicalAndExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitLogicalAndExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::LogicalAndExprContext* AngelscriptExprParserParser::logicalAndExpr() {
  LogicalAndExprContext *_localctx = _tracker.createInstance<LogicalAndExprContext>(_ctx, getState());
  enterRule(_localctx, 4, AngelscriptExprParserParser::RuleLogicalAndExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    bitOrExpr();
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::AndAnd) {
      setState(40);
      match(AngelscriptExprParserParser::AndAnd);
      setState(41);
      bitOrExpr();
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BitOrExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::BitOrExprContext::BitOrExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::BitXorExprContext *> AngelscriptExprParserParser::BitOrExprContext::bitXorExpr() {
  return getRuleContexts<AngelscriptExprParserParser::BitXorExprContext>();
}

AngelscriptExprParserParser::BitXorExprContext* AngelscriptExprParserParser::BitOrExprContext::bitXorExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::BitXorExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::BitOrExprContext::Or() {
  return getTokens(AngelscriptExprParserParser::Or);
}

tree::TerminalNode* AngelscriptExprParserParser::BitOrExprContext::Or(size_t i) {
  return getToken(AngelscriptExprParserParser::Or, i);
}


size_t AngelscriptExprParserParser::BitOrExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleBitOrExpr;
}


std::any AngelscriptExprParserParser::BitOrExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitBitOrExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::BitOrExprContext* AngelscriptExprParserParser::bitOrExpr() {
  BitOrExprContext *_localctx = _tracker.createInstance<BitOrExprContext>(_ctx, getState());
  enterRule(_localctx, 6, AngelscriptExprParserParser::RuleBitOrExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    bitXorExpr();
    setState(52);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::Or) {
      setState(48);
      match(AngelscriptExprParserParser::Or);
      setState(49);
      bitXorExpr();
      setState(54);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BitXorExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::BitXorExprContext::BitXorExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::BitAndExprContext *> AngelscriptExprParserParser::BitXorExprContext::bitAndExpr() {
  return getRuleContexts<AngelscriptExprParserParser::BitAndExprContext>();
}

AngelscriptExprParserParser::BitAndExprContext* AngelscriptExprParserParser::BitXorExprContext::bitAndExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::BitAndExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::BitXorExprContext::Xor() {
  return getTokens(AngelscriptExprParserParser::Xor);
}

tree::TerminalNode* AngelscriptExprParserParser::BitXorExprContext::Xor(size_t i) {
  return getToken(AngelscriptExprParserParser::Xor, i);
}


size_t AngelscriptExprParserParser::BitXorExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleBitXorExpr;
}


std::any AngelscriptExprParserParser::BitXorExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitBitXorExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::BitXorExprContext* AngelscriptExprParserParser::bitXorExpr() {
  BitXorExprContext *_localctx = _tracker.createInstance<BitXorExprContext>(_ctx, getState());
  enterRule(_localctx, 8, AngelscriptExprParserParser::RuleBitXorExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    bitAndExpr();
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::Xor) {
      setState(56);
      match(AngelscriptExprParserParser::Xor);
      setState(57);
      bitAndExpr();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BitAndExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::BitAndExprContext::BitAndExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::EqualityExprContext *> AngelscriptExprParserParser::BitAndExprContext::equalityExpr() {
  return getRuleContexts<AngelscriptExprParserParser::EqualityExprContext>();
}

AngelscriptExprParserParser::EqualityExprContext* AngelscriptExprParserParser::BitAndExprContext::equalityExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::EqualityExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::BitAndExprContext::And() {
  return getTokens(AngelscriptExprParserParser::And);
}

tree::TerminalNode* AngelscriptExprParserParser::BitAndExprContext::And(size_t i) {
  return getToken(AngelscriptExprParserParser::And, i);
}


size_t AngelscriptExprParserParser::BitAndExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleBitAndExpr;
}


std::any AngelscriptExprParserParser::BitAndExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitBitAndExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::BitAndExprContext* AngelscriptExprParserParser::bitAndExpr() {
  BitAndExprContext *_localctx = _tracker.createInstance<BitAndExprContext>(_ctx, getState());
  enterRule(_localctx, 10, AngelscriptExprParserParser::RuleBitAndExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    equalityExpr();
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::And) {
      setState(64);
      match(AngelscriptExprParserParser::And);
      setState(65);
      equalityExpr();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualityExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::EqualityExprContext::EqualityExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::RelationalExprContext *> AngelscriptExprParserParser::EqualityExprContext::relationalExpr() {
  return getRuleContexts<AngelscriptExprParserParser::RelationalExprContext>();
}

AngelscriptExprParserParser::RelationalExprContext* AngelscriptExprParserParser::EqualityExprContext::relationalExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::RelationalExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::EqualityExprContext::Equal() {
  return getTokens(AngelscriptExprParserParser::Equal);
}

tree::TerminalNode* AngelscriptExprParserParser::EqualityExprContext::Equal(size_t i) {
  return getToken(AngelscriptExprParserParser::Equal, i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::EqualityExprContext::NotEqual() {
  return getTokens(AngelscriptExprParserParser::NotEqual);
}

tree::TerminalNode* AngelscriptExprParserParser::EqualityExprContext::NotEqual(size_t i) {
  return getToken(AngelscriptExprParserParser::NotEqual, i);
}


size_t AngelscriptExprParserParser::EqualityExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleEqualityExpr;
}


std::any AngelscriptExprParserParser::EqualityExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitEqualityExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::EqualityExprContext* AngelscriptExprParserParser::equalityExpr() {
  EqualityExprContext *_localctx = _tracker.createInstance<EqualityExprContext>(_ctx, getState());
  enterRule(_localctx, 12, AngelscriptExprParserParser::RuleEqualityExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    relationalExpr();
    setState(76);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AngelscriptExprParserParser::Equal

    || _la == AngelscriptExprParserParser::NotEqual) {
      setState(72);
      _la = _input->LA(1);
      if (!(_la == AngelscriptExprParserParser::Equal

      || _la == AngelscriptExprParserParser::NotEqual)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(73);
      relationalExpr();
      setState(78);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelationalExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::RelationalExprContext::RelationalExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::ShiftExprContext *> AngelscriptExprParserParser::RelationalExprContext::shiftExpr() {
  return getRuleContexts<AngelscriptExprParserParser::ShiftExprContext>();
}

AngelscriptExprParserParser::ShiftExprContext* AngelscriptExprParserParser::RelationalExprContext::shiftExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::ShiftExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::RelationalExprContext::Less() {
  return getTokens(AngelscriptExprParserParser::Less);
}

tree::TerminalNode* AngelscriptExprParserParser::RelationalExprContext::Less(size_t i) {
  return getToken(AngelscriptExprParserParser::Less, i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::RelationalExprContext::LessEqual() {
  return getTokens(AngelscriptExprParserParser::LessEqual);
}

tree::TerminalNode* AngelscriptExprParserParser::RelationalExprContext::LessEqual(size_t i) {
  return getToken(AngelscriptExprParserParser::LessEqual, i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::RelationalExprContext::Greater() {
  return getTokens(AngelscriptExprParserParser::Greater);
}

tree::TerminalNode* AngelscriptExprParserParser::RelationalExprContext::Greater(size_t i) {
  return getToken(AngelscriptExprParserParser::Greater, i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::RelationalExprContext::GreaterEqual() {
  return getTokens(AngelscriptExprParserParser::GreaterEqual);
}

tree::TerminalNode* AngelscriptExprParserParser::RelationalExprContext::GreaterEqual(size_t i) {
  return getToken(AngelscriptExprParserParser::GreaterEqual, i);
}


size_t AngelscriptExprParserParser::RelationalExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleRelationalExpr;
}


std::any AngelscriptExprParserParser::RelationalExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitRelationalExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::RelationalExprContext* AngelscriptExprParserParser::relationalExpr() {
  RelationalExprContext *_localctx = _tracker.createInstance<RelationalExprContext>(_ctx, getState());
  enterRule(_localctx, 14, AngelscriptExprParserParser::RuleRelationalExpr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    shiftExpr();
    setState(84);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3342336) != 0)) {
      setState(80);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 3342336) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(81);
      shiftExpr();
      setState(86);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftExprContext ------------------------------------------------------------------

AngelscriptExprParserParser::ShiftExprContext::ShiftExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AngelscriptExprParserParser::AdditiveExprContext *> AngelscriptExprParserParser::ShiftExprContext::additiveExpr() {
  return getRuleContexts<AngelscriptExprParserParser::AdditiveExprContext>();
}

AngelscriptExprParserParser::AdditiveExprContext* AngelscriptExprParserParser::ShiftExprContext::additiveExpr(size_t i) {
  return getRuleContext<AngelscriptExprParserParser::AdditiveExprContext>(i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::ShiftExprContext::Greater() {
  return getTokens(AngelscriptExprParserParser::Greater);
}

tree::TerminalNode* AngelscriptExprParserParser::ShiftExprContext::Greater(size_t i) {
  return getToken(AngelscriptExprParserParser::Greater, i);
}

std::vector<tree::TerminalNode *> AngelscriptExprParserParser::ShiftExprContext::Less() {
  return getTokens(AngelscriptExprParserParser::Less);
}

tree::TerminalNode* AngelscriptExprParserParser::ShiftExprContext::Less(size_t i) {
  return getToken(AngelscriptExprParserParser::Less, i);
}


size_t AngelscriptExprParserParser::ShiftExprContext::getRuleIndex() const {
  return AngelscriptExprParserParser::RuleShiftExpr;
}


std::any AngelscriptExprParserParser::ShiftExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AngelscriptExprParserVisitor*>(visitor))
    return parserVisitor->visitShiftExpr(this);
  else
    return visitor->visitChildren(this);
}

AngelscriptExprParserParser::ShiftExprContext* AngelscriptExprParserParser::shiftExpr() {
  ShiftExprContext *_localctx = _tracker.createInstance<ShiftExprContext>(_ctx, getState());
  enterRule(_localctx, 16, AngelscriptExprParserParser::RuleShiftExpr);
